# PyTorchLab

./: .gitignore  COCO_val.json  README.md  gt_refined.json  main.py  matrixnetrequirements.txt  predict.py  pyproject.toml  refined_pred.json  requirements.txt  s.py  train.py  train_VID.py  train_yolox_VID.py
docs/: GANs.md  references.md
example/: gan_demo.yml
example/classify/: resnet.py
example/gans/: dcgan.yml  gan.yml
example/yoloXforVID/: yoloV_s.yaml
example/yolov/: val_new.npy  yoloV_s.yaml
example/yolox/: yolox_nano.yaml  yolox_s.yaml
requirements/: linux.txt
scripts/: make_data_file.py
src/pytorchlab/: __init__.py
src/pytorchlab/callbacks/: classify.py  loss.py  vision.py
src/pytorchlab/callbacks/gans/: __init__.py  gan.py
src/pytorchlab/datamodules/: __init__.py  basic.py  vision.py
src/pytorchlab/datamodules/yoloVID/: DataPrefetcher.py  VIDDataset.py  coco_classes.py  cocoevalFORVID.py  mosaicDetectionVID.py  yoloVDataModule.py
src/pytorchlab/datamodules/yoloXFORVID/: yolox_dataset.py
src/pytorchlab/datamodules/yolox/: cocoDataset.py  mosaic_detection.py  yoloDataset.py  yolox_dataset.py
src/pytorchlab/datamodules/yolox/augmentation/: copypaste.py  cutpaste.py
src/pytorchlab/datamodules/yolox/pycocotools/: cocoeval.py
src/pytorchlab/metrics/: classify.py
src/pytorchlab/models/: common_modules.py  lenet.py
src/pytorchlab/models/MemMatYOLOX/: CSPBackbone.py  MatrixNetAnchors.py  MemMatYOLOX_Lightning.py  matrixnet.py
src/pytorchlab/models/gans/: gan.py
src/pytorchlab/models/gans/dcgan/: components.py  dcgan.py
src/pytorchlab/models/gans/gan/: components.py  gan.py
src/pytorchlab/models/yoloVID/: YOLOV.py  YOLOVID_Lightning.py  coco_evaluator.py  post_trans.py  vid_evaluator_v2.py  yolo_pafpn.py  yolov_msa_online.py
src/pytorchlab/models/yoloXforVID/: YOLOX_Lit.py  coco_evaluator.py  yolo_head.py  yolox.py
src/pytorchlab/models/yolox/: darknet_csp.py  decoupled_head.py  pafpn.py  pl_yolox.py  yolox_loss.py
src/pytorchlab/models/yolox/evaluators/: coco.py
src/pytorchlab/utils/: __init__.py  cli.py  common.py  data.py  defaults.py  flops.py  type_hint.py  vision.py
src/pytorchlab/utils/yoloVID/: __init__.py  data_augment.py  ops.py
tests/: test.py
