[project]
name = "PyTorchLab"
version = "0.0.1"
description = "Realize code in AI field with PyTorch and Lightning."
authors = [{ name = "TaoChenyue", email = "chenyue.Tao@qq.com" }]
dependencies = [
    "lightning>=2.0.5",
    "torch>=2.0.1",
    "torchmetrics>=1.0.1",
    "tensorboard>=2.13.0",
    "tensorboardX>=2.6.1",
    "torchvision>=0.16.0",
    "matplotlib>=3.8.1",
    "jsonargparse[signatures]>=4.27.0",
    "thop>=0.1.1.post2209072238",
    "nni>=3.0",
    "pycocotools>=2.0.7",
    "opencv-python>=4.8.1.78",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "GPLv3" }
# select from https://pypi.org/classifiers/
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/TaoChenyue/PyTorchLab"
# Homepage = ""
# Documentation = ""
# Changelog = ""

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["black>=23.7.0", "isort>=5.12.0", "autoflake>=2.2.1"]

[tool.pdm.scripts]
autoflake = { cmd = [
    "autoflake",
    "--remove-all-unused-imports",
    "--ignore-init-module-imports",
    "--in-place",
    "-r",
    ".",
] }
black = "black ."
isort = "isort ."
format = { composite = ["autoflake", "black", "isort"] }
